[package]
name = "vkml"
version = "0.0.1"
edition = "2024"
authors = ["PieInOblivion"]
license = "MIT"
description = "High-level Vulkan-based machine learning library"
readme = "README.md"
repository = "https://github.com/PieInOblivion/VKML"
keywords = ["vulkan", "machine-learning", "gpu", "compute", "ml"]
categories = ["science", "graphics", "hardware-support"]

[profile.release]
lto = true

[dependencies]
vulkanalia = { version = "0.31", features = ["libloading"] }
rand = "0.9"
thiserror = "2"
sys-info = "0.9"
bytemuck = "1.23"
zero-pool = "0.5"
onnx-extractor = "0.3"

#[dev-dependencies]
image = { version = "0.25", default-features = false, features = ["png"] }